test/invalid/num.js
function f(x) { var y = 0; y = x[0]; return 'a'; }
var j = [];
f(j);
return j;
